--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <!-- 3개의 핵심 링크 -->
     <section class="row" aria-label="Primary actions">
-      <a class="btn" href="https://tnwlc.github.io/archive">
+      <a class="btn" href="https://tnwlc.github.io/archive/">
         ARCHIVE
         <span class="hint">/art /rugs /collections</span>
       </a>
