--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="">
   <meta name="viewport" content="width=device-width, user-scalable=no">
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" href="">
+  <link rel="icon" type="image/jpg" href="">
 
 </head>
 
@@ -45,7 +45,7 @@
         CV ↗
         <span class="hint">external</span>
       </a>
-      <a class="btn" href="https://" target="_blank" rel="noopener">
+      <a class="btn" href="https://www.instagram.com/linesets_/" rel="noopener noreferrer">
         STUDYING
         <span class="hint">study records</span>
       </a>
