--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <h1 class="brand">soojimeter.xyz</h1>
       <div class="stamp">
         <span class="stamp-track">
-          last update · 2025-11-12 &nbsp;
-          last update · 2025-11-12
+          last update · 2025-11-20 &nbsp;
+          last update · 2025-11-20
         </span>
       </div>
     </header>
@@ -35,15 +35,15 @@
     <section class="row" aria-label="Primary actions">
       <a class="btn" href="https://tnwlc.github.io/archive/">
         ARCHIVE
-        <span class="hint">/art /rugs /collections</span>
+        <span class="hint"></span>
       </a>
-      <a class="btn" href="/work">
+      <a class="btn" href="/">
         WORK
-        <span class="hint">/trials /ideas</span>
+        <span class="hint"></span>
       </a>
       <a class="btn" href="https://tnwlc.github.io/" target="_blank" rel="noopener">
         CV ↗
-        <span class="hint">external</span>
+        <span class="hint"></span>
       </a>
       <a class="btn" href="https://www.instagram.com/linesets_/" rel="noopener noreferrer">
         STUDYING
@@ -54,7 +54,7 @@
     <!-- 보조 링크 -->
     <nav class="strip">
      <p class="info">Now →
-    working on drawings for rug pieces · making new pages for soojimeter.xyz, cv </p>
+    working on drawings for rug pieces</p>
     </nav>
 
     <!-- 하단 -->
